<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/text_account"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/text_pwd"
		android:layout_marginLeft="20dp"
		android:text="@string/account"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
		android:id="@+id/account_input"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/text_account"
		android:layout_marginRight="20dp"
		android:layout_toRightOf="@+id/text_account"
		android:hint="@string/please_input_account" />

	<TextView
		android:id="@+id/text_pwd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="20dp"
		android:text="@string/password"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
		android:id="@+id/password_input"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/text_pwd"
		android:layout_marginRight="20dp"
		android:layout_toRightOf="@id/text_account"
		android:hint="@string/please_input_password"
		android:inputType="textPassword" />

	<Button
		android:id="@+id/login"
		style="@style/green_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@+id/password_input"
		android:layout_below="@+id/text_pwd"
		android:paddingLeft="20dp"
		android:paddingRight="20dp"
		android:paddingTop="1dp"
		android:text="@string/login" />

</RelativeLayout>