<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/text_email"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/text_pwd"
		android:layout_alignLeft="@+id/text_pwd_confirm"
		android:text="@string/email"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
		android:id="@+id/mail_input"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/text_email"
		android:layout_alignRight="@+id/pwd_input"
		android:layout_toRightOf="@+id/text_email"
		android:hint="@string/please_input_email"
		android:inputType="textEmailAddress" />

	<TextView
		android:id="@+id/text_pwd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/text_pwd_confirm"
		android:layout_alignLeft="@+id/text_pwd_confirm"
		android:layout_marginTop="20dp"
		android:text="@string/password"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
		android:id="@+id/pwd_input"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/text_pwd"
		android:layout_alignRight="@+id/pwd_confirm_input"
		android:layout_toRightOf="@+id/text_pwd"
		android:hint="@string/please_input_password"
		android:inputType="textEmailAddress" />

	<TextView
		android:id="@+id/text_pwd_confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="20dp"
		android:text="@string/password"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
		android:id="@+id/pwd_confirm_input"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/text_pwd_confirm"
		android:layout_marginRight="20dp"
		android:layout_toRightOf="@+id/text_email"
		android:hint="@string/please_confirm_password"
		android:inputType="textEmailAddress" />

	<Button
		android:id="@+id/confirm_register"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@+id/pwd_confirm_input"
		android:layout_below="@+id/text_pwd_confirm"
		android:layout_marginTop="10dp"
		android:text="@string/register" />

</RelativeLayout>