<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<ImageView
		android:id="@+id/main_image"
		android:layout_width="240dp"
		android:layout_height="240dp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="80dp"
		android:background="#444"
		android:contentDescription="@string/app_name" />

	<Button
		android:id="@+id/login"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/main_image"
		android:layout_alignRight="@+id/main_image"
		android:layout_below="@+id/main_image"
		android:layout_marginTop="10dp"
		android:text="@string/login" />

	<Button
		android:id="@+id/register"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/main_image"
		android:layout_alignRight="@+id/main_image"
		android:layout_below="@+id/login"
		android:layout_marginTop="10dp"
		android:text="@string/register" />

</RelativeLayout>