<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/detail_scroller"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<RelativeLayout
		android:id="@+id/book_detail"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<ImageView
			android:id="@+id/book_img"
			android:layout_width="150dp"
			android:layout_height="200dp"
			android:layout_alignParentLeft="true"
			android:layout_margin="10dp"
			android:background="#d33"
			android:contentDescription="@string/app_name" />

		<TextView
			android:id="@+id/book_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignTop="@+id/book_img"
			android:layout_marginRight="10dp"
			android:layout_toRightOf="@+id/book_img"
			android:text="@string/default_book_name"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<ScrollView
			android:id="@+id/book_introduce_scroller"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_alignBottom="@+id/book_img"
			android:layout_alignRight="@+id/book_name"
			android:layout_below="@+id/book_name"
			android:layout_marginTop="10dp"
			android:layout_toRightOf="@+id/book_img" >

			<TextView
				android:id="@+id/book_introduce"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/default_long_book_introduce"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		</ScrollView>

		<TextView
			android:id="@+id/label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/book_img"
			android:layout_below="@+id/book_img"
			android:text="@string/label"
			android:textSize="20sp" />

		<LinearLayout
			android:id="@+id/label_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/book_img"
			android:layout_alignRight="@+id/book_name"
			android:layout_below="@+id/label"
			android:orientation="vertical" >

			<View
				android:layout_width="match_parent"
				android:layout_height="100dp"
				android:background="#dd3" />
		</LinearLayout>

		<TextView
			android:id="@+id/comment"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/book_img"
			android:layout_below="@+id/label_container"
			android:text="@string/comment"
			android:textSize="20sp" />

		<LinearLayout
			android:id="@+id/comment_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/book_img"
			android:layout_alignRight="@+id/book_name"
			android:layout_below="@+id/comment"
			android:orientation="vertical" >

			<View
				android:layout_width="match_parent"
				android:layout_height="100dp"
				android:background="#dd3" />

			<View
				android:layout_width="match_parent"
				android:layout_height="100dp"
				android:background="#dd3" />
		</LinearLayout>

		<include
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:layout_alignParentBottom="true"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			layout="@layout/action_comment" />
	</RelativeLayout>

</ScrollView>